Inserts into collection on email send; Refactors DB queries

--- a/server/routes/mail/message.html
+++ b/server/routes/mail/message.html
@@ -13,4 +13,6 @@
 <h3>Message: </h3>
 <p>${content}</p>
 
-<a href="">Set this as today's quote of the day</a>
+<a href="http://localhost:8080/set-quote?id=${id}" target="_blank">
+  Set this as today's quote of the day
+</a>
